--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,7 +354,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: url("../img/desa.png") top center;
+  background: url("../img/desa.jpg") top center;
   background-size: cover;
   position: relative;
 }
